...
                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="52M-eX-L9f">
                                        <rect key="frame" x="212" y="0.0" width="162" height="40"/>
                                        <constraints>
                                            <constraint firstAttribute="height" constant="40" id="203-ng-Ye2"/>
                                        </constraints>
                                        <fontDescription key="fontDescription" type="system" pointSize="16"/>
                                        <state key="normal" title="For Instructors">
                                            <color key="titleColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                        </state>
                                        <connections>
                                            <segue destination="Idk-JO-aQB" kind="presentation" identifier="InstructorSignUpSegue" modalPresentationStyle="automatic" id="Du6-up-tPL"/>
                                        </connections>
                                    </button>
...
                                <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                <nil key="highlightedColor"/>
                            </label>
                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="I3e-u2-hkI" userLabel="Anywhere Fitness">
                                <rect key="frame" x="82" y="104" width="250" height="90"/>
                                <subviews>
                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Anywhere" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="4AB-Uk-Gg7">
                                        <rect key="frame" x="0.0" y="0.0" width="250" height="40"/>
                                        <fontDescription key="fontDescription" name="Rockwell-Bold" family="Rockwell" pointSize="40"/>
                                        <color key="textColor" red="0.89992465101522845" green="0.89992465101522845" blue="0.89992465101522845" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                        <nil key="highlightedColor"/>
                                    </label>
                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Fitness" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="nEL-Tt-0mX">
...
                                    <constraint firstAttribute="height" constant="170" id="6FQ-6u-3mr"/>
                                </constraints>
                            </view>
                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillEqually" alignment="center" spacing="15" translatesAutoresizingMaskIntoConstraints="NO" id="INd-jZ-4G3">
                                <rect key="frame" x="70" y="383" width="274" height="130"/>
                                <subviews>
                                    <textField opaque="NO" tag="1" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="email" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="IkK-KV-4XC">
                                        <rect key="frame" x="0.0" y="0.0" width="274" height="33.5"/>
                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                        <textInputTraits key="textInputTraits"/>
                                    </textField>
                                    <textField opaque="NO" tag="2" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="password" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Ets-ps-Hhr">
                                        <rect key="frame" x="0.0" y="48.5" width="274" height="33"/>
                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                        <textInputTraits key="textInputTraits"/>
                                    </textField>
                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Qgq-9z-QKa">
                                        <rect key="frame" x="20" y="96.5" width="234" height="33.5"/>
                                        <state key="normal" title="Log In">
                                            <color key="titleColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                        </state>
                                        <connections>
                                            <action selector="logInButtonTapped:" destination="BYZ-38-t0r" eventType="touchUpInside" id="orX-dq-EcE"/>
                                        </connections>
                                    </button>
...
                                <rect key="frame" x="107" y="668" width="200" height="40"/>
                                <constraints>
                                    <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="200" id="X0h-CY-GMr"/>
                                    <constraint firstAttribute="height" constant="40" id="XgM-gi-9vE"/>
                                </constraints>
                                <fontDescription key="fontDescription" type="system" weight="medium" pointSize="18"/>
                                <state key="normal" title="Confirm">
                                    <color key="titleColor" red="0.89992465099999996" green="0.89992465099999996" blue="0.89992465099999996" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                </state>
                                <connections>
                                    <action selector="confirmButtonTapped:" destination="Idk-JO-aQB" eventType="touchUpInside" id="esx-rm-jRH"/>
                                </connections>
                            </button>
...
