...
                            <constraint firstItem="7pJ-LI-oci" firstAttribute="bottom" secondItem="huz-Yh-Qck" secondAttribute="bottom" constant="372" id="eGC-kx-KlT"/>
                            <constraint firstItem="huz-Yh-Qck" firstAttribute="leading" secondItem="7pJ-LI-oci" secondAttribute="leading" constant="20" id="rOx-eI-vI2"/>
                            <constraint firstItem="ALV-8u-qcH" firstAttribute="leading" secondItem="7pJ-LI-oci" secondAttribute="leading" constant="20" id="vce-3Q-9Vl"/>
                        </constraints>
                        <viewLayoutGuide key="safeArea" id="7pJ-LI-oci"/>
                    </view>
                    <navigationItem key="navigationItem" title="Client" id="IAP-C6-TtU">
                        <barButtonItem key="rightBarButtonItem" title="Log Out" id="RpH-bn-nDy">
                            <color key="tintColor" red="0.42640530720000003" green="0.56765578370000003" blue="0.64126785419999999" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                            <connections>
                                <action selector="logOutButtonTapped:" destination="KfU-eR-ZcI" id="zDJ-27-G54"/>
                            </connections>
                        </barButtonItem>
                    </navigationItem>
...
