...
                                <connections>
                                    <segue destination="581-rS-ong" kind="presentation" modalPresentationStyle="fullScreen" id="IjN-Cx-NFO"/>
                                </connections>
                            </button>
                            <button opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="52M-eX-L9f">
                                <rect key="frame" x="238" y="702" width="67" height="30"/>
                                <state key="normal" title="Instructor"/>
                                <connections>
                                    <segue destination="u6P-6h-ude" kind="presentation" modalPresentationStyle="fullScreen" id="Ry3-Nt-0jt"/>
                                </connections>
                            </button>
                        </subviews>
                        <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
...
